# xr_core_test

./: CMakeLists.txt  arplane.h  main.cpp  plane_changes.h  plane_tracking.cpp  plane_tracking.h  rokid_xr_core_enum.h
include/: ar_plane.h  arplane.h  bounded_plane.h  plane_changes.h  plane_manager.cpp  plane_manager.h  plane_tracking.h  plane_tracking_enum.h  trackableId.h  trackable_id.h  unity_debug.h  unity_math.h
include/utils/: unity_debug.h
release_android/arm64-v8a/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  main
src/: bounded_plane.cpp  plane_changes.cpp  plane_manager.cpp  plane_tracking.cpp  trackable_id.cpp  unity_debug.cpp
tools/ci/: release_android.sh
utils/: unity_debug.cpp  unity_debug.h
